# learn-next-fastapi-app-with-langchain

./: .gitignore  next.config.js  package-lock.json  package.json  pyproject.toml
api/: agent.py  index.py
api/utils/: tools.py  types.py
app/(examples)/02-chat-data/: page.tsx
