[project]
name = "next-fastapi-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "fastapi-cli>=0.0.8",
    "langchain-aws>=0.2.29",
    "langchain-community>=0.3.27",
    "openai>=1.97.1",
    "strands-agents>=1.0.0",
    "strands-agents-tools>=0.2.0",
]
